fixed button on mobile layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -152,7 +152,7 @@ footer {
 }
 
 /* responsive styles */
-@media (max-width: 1300px){
+@media (max-width: 1300px) {
   .mockup-img {
     /* width: ; */
     margin: 0;
@@ -162,9 +162,11 @@ footer {
 @media (max-width: 900px) {
   body {
     background-image: url(../images/bg-mobile.svg);
+    background-size: contain;
   }
 
-  header{
+  header {
+    margin: 2.125rem 0 2rem 0;
     margin-left: 39px;
     max-height: 92px;
     display: flex;
@@ -175,59 +177,59 @@ footer {
     width: 125px;
   }
 
-  main{
+  main {
     flex-direction: column;
     align-items: center;
   }
 
-  .left-side{
+  .left-side {
     min-width: 100%;
   }
 
-  .mockup-img{
+  .mockup-img {
     margin: 32px 38.48px 36px 38px;
     width: 297px;
   }
 
-  .right-side{
+  .right-side {
     margin: 28.1px 35px;
   }
 
-  .heading{
+  .heading {
     font-size: 1.5rem;
     text-align: center;
   }
 
-  .description{
-    margin: 10px 0;
+  .description {
+    margin: 10px 0 30px 0;
     font-size: 1rem;
     text-align: center;
   }
 
-  .register-button{
+  .register-button {
     height: 40px;
     width: 200px;
     font-size: 0.8rem;
     align-self: center;
   }
 
-  footer{
+  footer {
     min-height: 100px;
   }
 
-  .socials{
+  .socials {
     justify-content: center;
     margin: 40px 0;
   }
 
-  .circle-border{
+  .circle-border {
     width: 27px;
     height: 27px;
     justify-content: center;
     align-items: center;
   }
 
-  .circle-border>i{
+  .circle-border > i {
     font-size: 13px;
   }
 }
